objects/User.object
<CustomObject>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <description>Feed Outbound - CRC Agen ID</description>
        <label>Agent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CtiServerDescription__c</fullName>
        <description>Feed Outbound - CtiServerDescription</description>
        <label>Cti Server Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CtiServerIP__c</fullName>
        <description>Feed Outbound - CtiServerIP</description>
        <label>Cti Server IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cti_Server_ID__c</fullName>
        <description>Feed Outbound - CtiServerID</description>
        <label>Cti Server ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeNumber__c</fullName>
        <description>Feed Outbound - EmployeeNumber</description>
        <label>Employee Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>Feed Outbound - First Name</description>
        <formula>FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAdUser__c</fullName>
        <description>Feed Outbound - Hardcode value &apos;N&apos;</description>
        <formula>&apos;N&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAdUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLogged__c</fullName>
        <description>Feed Outbound - IsLogged</description>
        <label>Is Logged</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Feed Outbound - LastName</description>
        <formula>LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Feed Outbound - Location</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NiceServerIP__c</fullName>
        <description>Feed Outbound - NiceServerIP</description>
        <label>Nice Server IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NiceServerPort__c</fullName>
        <description>Feed Outbound - NiceServerPort</description>
        <label>Nice Server Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_ID__c</fullName>
        <description>Feed Outbound - PBX ID</description>
        <label>PBX ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SERDialerID__c</fullName>
        <description>Feed Outbound - SERDialerID</description>
        <label>SER Dialer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>